--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Universal Video Downloader Environment Configuration
+# MARS (Media Archive Recording System) Environment Configuration
 
 # Auto-close browser delay in seconds
 AUTO_CLOSE_DELAY=15
