--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 version: '3.8'
 
 services:
-  video-downloader:
+  mars:
     build:
       context: .
       dockerfile: Dockerfile
-    image: video-downloader:latest
-    container_name: video-downloader
+    image: mars:latest
+    container_name: mars
     restart: unless-stopped
     ports:
       - "5000:5000" # Flask web interface
       - "6080:6080" # noVNC
     volumes:
-      - /volume1/media/downloads:/app/downloads:rw  # Location for downloaded videos
+      - /volume1/media/downloads:/app/downloads:rw  # Location for downloaded media
 
-      - /volume2/Dockerssd/video-downloader/chrome-data:/app/chrome-data:rw # Location for Chrome data persistence
-      - /volume2/Dockerssd/video-downloader/logs:/app/logs:rw # Location for application logs
+      - /volume2/Dockerssd/mars/chrome-data:/app/chrome-data:rw # Location for Chrome data persistence
+      - /volume2/Dockerssd/mars/logs:/app/logs:rw # Location for application logs
     environment:
       - DISPLAY=:99
       - CHROME_USER_DATA_DIR=/app/chrome-data
