--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,4 @@ logs/
 
 
 # Docker
-docker-compose.yml  # Personal compose file with specific paths
-docker-compose.override.yml
+docker-compose.yml
